# aozora-rag-chat

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  shell.nix
.claude/: settings.local.json
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py  settings.py
backend/app/routes/: search.py  works.py
backend/app/schemas/: __init__.py  search.py
backend/app/services/: chroma_client.py  exa_client.py  search_orchestrator.py
backend/app/utils/: aozora.py
data/manifests/: aozora_index.jsonl
docs/: design-v1.md  setup.md
frontend/: .env.example  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/search/: route.ts
frontend/src/app/api/works/: route.ts
frontend/src/app/api/works/[workId]/text/: route.ts
frontend/src/components/chat/: chat-panel.tsx  citation-hover-card.tsx  context-badges.tsx  message-bubble.tsx
frontend/src/components/layout/: app-layout.tsx
frontend/src/components/sidebar/: sidebar.tsx
frontend/src/components/viewer/: text-viewer.tsx
frontend/src/hooks/: use-chat-context.ts  use-debounce.ts  use-viewer.ts
frontend/src/lib/: api.ts  backend-config.ts  citation-parser.ts  prompt.ts  types.ts
scripts/: .env.example  fetch_aozora_repo.sh  ingest_pipeline.py  requirements.txt
scripts/aozora/: __init__.py  chunking.py  cleaning.py  schema.py
